'Thrift-Shop-Online'

--- a/aplicacion/templates/aplicacion/home.html
+++ b/aplicacion/templates/aplicacion/home.html
@@ -18,14 +18,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Home</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link" href="{% url 'tops' %}">Tops</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'bottoms' %}">Bottoms</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'shoes' %}">Shoes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'accesories' %}">Accesories</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'accessories' %}">Accesories</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About me</a></li>
                         
                     </ul>
@@ -45,13 +45,16 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
+                    <h1 class="display-4 fw-bolder">Stylo</h1>
                     <p class="lead fw-normal text-white-50 mb-0">Thrift Shop Online</p>
                 </div>
             </div>
         </header>
 
+
         {% block contenido %}
             aqui va el contenido segun cada pagina
         {% endblock contenido %}    
+
+        
        
