--- a/aplicacion/templates/aplicacion/tops.html
+++ b/aplicacion/templates/aplicacion/tops.html
@@ -1,6 +1,7 @@
 {% extends 'aplicacion/home.html' %}
 {% load static %}
 
+
 {% block contenido %}
  <!-- Section-->
  <section class="py-5">
@@ -215,5 +216,17 @@
 <script src="{% static 'aplicacion/js/scripts.js' %}"></script>
 </body>
 </html>
+
+<div></div>
+    <h2>Tops</h2>
+    <div></div>
+    <form action="" method="POST">
+        {% csrf_token %} 
+        <table>
+            {{ form.as_table }}
+        </table>
+        <div></div>
+        <input type="submit" value="Create New Item">
+    </form>
 
 {% endblock contenido %}
