--- a/aplicacion/templates/aplicacion/tops.html
+++ b/aplicacion/templates/aplicacion/tops.html
@@ -205,20 +205,8 @@
             </div>
         </div>
     </div>
-</section>
-<!-- Footer-->
-<footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-</footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="{% static 'aplicacion/js/scripts.js' %}"></script>
-</body>
-</html>
 
-<div></div>
-    <h2>Tops</h2>
+    <h2>New top</h2>
     <div></div>
     <form action="" method="POST">
         {% csrf_token %} 
@@ -228,5 +216,20 @@
         <div></div>
         <input type="submit" value="Create New Item">
     </form>
+
+
+</section>
+<!-- Footer-->
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Stylo 2023</p></div>
+</footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="{% static 'aplicacion/js/scripts.js' %}"></script>
+</body>
+</html>
+
+  
 
 {% endblock contenido %}
