'Thrift-Shop-Online’

--- a/aplicacion/templates/aplicacion/accessories.html
+++ b/aplicacion/templates/aplicacion/accessories.html
@@ -205,6 +205,14 @@
             </div>
         </div>
     </div>
+    
+</section> 
+</nav> 
+    <div class="text-center">    
+    <a class="btn btn-primary" href="{% url 'create_accessory' %}">Create New Accessory</a>
+    </div>
+</nav> 
+
 </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
