--- a/aplicacion/templates/aplicacion/shoes.html
+++ b/aplicacion/templates/aplicacion/shoes.html
@@ -205,6 +205,12 @@
             </div>
         </div>
     </div>
+</section> 
+</nav> 
+    <div class="text-center">    
+    <a class="btn btn-primary" href="{% url 'create_shoe' %}">Create New Shoes</a>
+    </div>
+</nav> 
 </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
