'Thrift-Shop-Online’

--- a/aplicacion/templates/aplicacion/accessories_form.html
+++ b/aplicacion/templates/aplicacion/accessories_form.html
@@ -4,7 +4,7 @@
 {% block contenido %}
 
 <div></div>
-    <h2>Accesories</h2>
+    <h2>Accessories</h2>
     <div></div>
     <form action="" method="POST">
         {% csrf_token %} 
