--- a/aplicacion/templates/aplicacion/home.html
+++ b/aplicacion/templates/aplicacion/home.html
@@ -14,39 +14,54 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'aplicacion/css/styles.css' %}" rel="stylesheet" />
     </head>
+
     <body>
-        <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    {% if user.is_authenticated  %}
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'tops' %}">Tops</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'bottoms' %}">Bottoms</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'shoes' %}">Shoes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'accessories' %}">Accesories</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'aboutme' %}">About me</a></li>
-                        <div class="text-center">
-                            <img src="{{ request.session.avatar }}" height="40px" weight="40px"/>
-                        </div>    
-                        <a class="btn btn-primary" href="{% url 'logout' %}">Log Out</a>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'edit_user' %}">Edit User</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'add_avatar' %}">Add Avatar</a></li>
-
-                    </ul>
-                  
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        {% if user.is_authenticated  %}
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link" href="{% url 'tops' %}">Tops</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'bottoms' %}">Bottoms</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'shoes' %}">Shoes</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'accessories' %}">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'aboutme' %}">About me</a></li>
+            </ul>
+        
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <div class="text-center">
+                        <img src="{{ request.session.avatar }}" height="40px" width="40px"/>
+                    </div>
+                </li>
+                <li class="nav-item">
                     <a class="btn btn-primary" href="{% url 'admin:index' %}">Admin</a>
-
-                    {% else %}
+                </li>
+                <li class="nav-item" style="margin-left: 10px;"> 
+                    <a class="btn btn-primary" href="{% url 'logout' %}">Log Out</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'edit_user' %}">Edit User</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'add_avatar' %}">Add Avatar</a></li>
+            </ul>
+            {% else %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
                     <a class="btn btn-primary" href="{% url 'login' %}">Log In</a>
+                <li class="nav-item" style="margin-left: 10px;"> 
                     <a class="btn btn-primary" href="{% url 'register' %}">Sign Up</a>
-                    {% endif %}
+                </li>
+            </ul>
+            {% endif %}
+        </div>
+    </div>
+</nav>
 
-                </div>
-            </div>
-        </nav>
+
         <!-- Header-->
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
@@ -59,8 +74,8 @@
 
 
         {% block contenido %}
-        <div class="text-center">
-        <h2>Log in or Sign Up to see our products!</h2>
+        <div class="text-center" style="margin-top: 20px;">
+            <h2>Welcome!</h2>
         </div>
         {% endblock contenido %}    
 
