--- a/aplicacion/templates/aplicacion/home.html
+++ b/aplicacion/templates/aplicacion/home.html
@@ -39,7 +39,7 @@
                         <img src="{{ request.session.avatar }}" height="40px" width="40px"/>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" style="margin-left: 10px;">
                     <a class="btn btn-primary" href="{% url 'admin:index' %}">Admin</a>
                 </li>
                 <li class="nav-item" style="margin-left: 10px;"> 
